# open-space-mmo

./: .gitignore  Big Ideas.txt  Big_Ideas.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  CREATIVE_CONTENT_LICENSE.md  DEFINITIONS.md  Getting-started.md  Goals-Vision.md  LICENSE  Let's focus on keeping anything this project is in.md  README.md  SOURCE_CODE_LICENSE  SOURCE_CODE_LICENSE.md  THIRD_PARTY_LICENSES.md  Template for documenting licensing.md  TheToolShed.md  brainstorms.md  code_of_conduct.md  resources.md  tools-to-use.txt
art/: sources.md
bevy_sandbox/bevy_renet_test/: Cargo.toml
bevy_sandbox/bevy_renet_test/examples/client/: main.rs
bevy_sandbox/bevy_renet_test/examples/server/: main.rs
bevy_sandbox/bevy_renet_test/src/examples/client/: main.rs
bevy_sandbox/bevy_renet_test/src/examples/server/: main.rs
bevy_sandbox/bevy_winit_get_desktop_size/: Cargo.toml
bevy_sandbox/bevy_winit_get_desktop_size/src/: main.rs
bevy_sandbox/fullscreen_toggle/: .gitignore  Cargo.toml  package-lock.json  package.json
bevy_sandbox/fullscreen_toggle/src/: components.rs  gameplay.rs  input.rs  main.rs  resources.rs  ui.rs
rust_sandbox/winit_get_desktop_size_experiment/: Cargo.toml  MONITOR_SIZE_GUIDE.md
rust_sandbox/winit_get_desktop_size_experiment/src/: main.rs
